[package]
name = "bra_ket"
description = "A multithreaded circuit model quanutm simulator for state vectors and density matrices."
license = "MIT"
readme = "README.md"
repository = "https://github.com/b-vanstraaten/bra_ket"
keywords = ["quantum", "simulator", "circuit", "state", "density"]
categories = ["science", "simulation"]

version = "0.1.1"
edition = "2021"

[dependencies]
nalgebra = "0.30.1"
log = "0.4.14"
itertools = "0.10.3"
itertools-num = "0.1.3"
rayon = "1.5.1"
rand = "0.8.5"
tqdm = "0.4.0"
gnuplot = "0.0.37"


[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmarks"
harness = false