[package]
name = "bra_ket"
description = "A multithreaded circuit model quanutm simulator for state vectors and density matrices."
license = "MIT"
readme = "README.md"
repository = "https://github.com/b-vanstraaten/bra_ket"
keywords = ["quantum", "simulator", "circuit", "state", "density"]
categories = ["science", "simulation"]

version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.32"
log = "0.4"
itertools = "0.10"
itertools-num = "0.1"
rayon = "1"
rand = "0.8"
gnuplot = "0.0.37"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmarks"
harness = false
